// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ForwarderForm/>: existed forwarder. Test with snapshot. 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      for="1"
    >
      Name
    </label>
    <div
      class="input-group"
    >
      <input
        class="form-control"
        id="1"
        type="text"
        value="Google"
      />
    </div>
  </div>
  <h5>
    IPv4 Addresses
  </h5>
  <div
    class="offset-1 col-10"
  >
    <div
      class="form-group"
    >
      <label
        for="2"
      >
        IPv4 #1
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="2"
          type="text"
          value="8.8.8.8"
        />
      </div>
    </div>
    <button
      class="btn btn-outline-success btn-sm col-12 mb-2"
      type="button"
    >
      Add IPv4 address
    </button>
  </div>
  <h5>
    IPv6 Addresses
  </h5>
  <div
    class="offset-1 col-10"
  >
    <div
      class="form-group"
    >
      <label
        for="3"
      >
        IPv6 #1
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="3"
          type="text"
          value="2001:4860:4860::8888"
        />
      </div>
    </div>
    <button
      class="btn btn-outline-success btn-sm col-12 mb-2"
      type="button"
    >
      Add IPv6 address
    </button>
  </div>
  <div
    class="form-group"
  >
    <label
      for="4"
    >
      TLS type
    </label>
    <select
      class="custom-select"
      id="4"
    >
      <option
        value="hostname"
      >
        Hostname
      </option>
      <option
        value="no"
      >
        No TLS
      </option>
      <option
        value="pin"
      >
        Pin
      </option>
    </select>
  </div>
  <button
    class="btn btn-primary col-lg-12 col-md-12 col-sm-12 col-md-3 col-lg-2"
    type="button"
  >
    Save
  </button>
</div>
`;

exports[`<ForwarderForm/>: new forwarder. Test with snapshot. 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      for="1"
    >
      Name
    </label>
    <div
      class="input-group"
    >
      <input
        class="form-control  is-invalid"
        id="1"
        type="text"
        value=""
      />
    </div>
    <div
      class="invalid-feedback"
    >
      Forwarder name should have at least one symbol.
    </div>
  </div>
  <h5>
    IPv4 Addresses
  </h5>
  <div
    class="offset-1 col-10"
  >
    <div
      class="form-group"
    >
      <label
        for="2"
      >
        IPv4 #1
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control  is-invalid"
          id="2"
          type="text"
          value=""
        />
      </div>
      <div
        class="invalid-feedback"
      >
        Define at least one of the IP addresses of the forwarder.
      </div>
    </div>
    <button
      class="btn btn-outline-success btn-sm col-12 mb-2"
      type="button"
    >
      Add IPv4 address
    </button>
  </div>
  <h5>
    IPv6 Addresses
  </h5>
  <div
    class="offset-1 col-10"
  >
    <div
      class="form-group"
    >
      <label
        for="3"
      >
        IPv6 #1
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control  is-invalid"
          id="3"
          type="text"
          value=""
        />
      </div>
      <div
        class="invalid-feedback"
      >
        Define at least one of the IP addresses of the forwarder.
      </div>
    </div>
    <button
      class="btn btn-outline-success btn-sm col-12 mb-2"
      type="button"
    >
      Add IPv6 address
    </button>
  </div>
  <div
    class="form-group"
  >
    <label
      for="4"
    >
      TLS type
    </label>
    <select
      class="custom-select"
      id="4"
    >
      <option
        value="hostname"
      >
        Hostname
      </option>
      <option
        value="no"
      >
        No TLS
      </option>
      <option
        value="pin"
      >
        Pin
      </option>
    </select>
  </div>
  <button
    class="btn btn-primary col-lg-12 col-md-12 col-sm-12 col-md-3 col-lg-2"
    disabled=""
    type="button"
  >
    Save
  </button>
</div>
`;
